orchestration/netpol-pract/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: networkpolicy-test
  labels:
    app: a
spec:
  containers:
  - name: nginx
    image: nginx:1.23
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: networkpolicy-test
  labels:
    app: b
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sh", "-c", "sleep 3600"]
